--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/literata": "^5.1.1",
+    "@fontsource/permanent-marker": "^5.1.1",
     "@matejmazur/react-katex": "^3.1.3",
     "bootstrap": "^5.3.3",
+    "chroma-js": "^3.1.2",
     "date-fns": "^4.1.0",
     "dedent": "^1.5.3",
     "react": "^18.3.1",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/chroma-js": "^3.1.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-plotly.js": "^2.6.3",
